--- a/app/src/main/res/layout/wallet_purchase_card_preview.xml
+++ b/app/src/main/res/layout/wallet_purchase_card_preview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccentLight"
-    tools:context=".wallet.activities.WalletPurchaseCardPreviewActivity" >
+    tools:context=".activities.wallet.WalletPurchaseCardPreviewActivity" >
 
         <LinearLayout
             android:id="@+id/layout_bill_summary"
