--- a/app/src/main/res/layout/wallet_add_money.xml
+++ b/app/src/main/res/layout/wallet_add_money.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:theme="@style/AppTheme"
+    android:layout_height="500dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_gravity="center"
+    android:fitsSystemWindows="true"
     android:background="@drawable/solidwhite_shape"
     tools:context=".activities.wallet.WalletHomeActivity">
 
@@ -17,28 +17,32 @@
         <TextView
             android:id="@+id/digital_wallet_title_label"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:text="@string/addmoney"
-            android:theme="@style/HeaderTheme"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dimen_20dp"
+            android:paddingLeft="@dimen/dimen_30dp"
+            android:textStyle="bold"
+            android:textSize="25dp"
+            android:text="Deposit Money"
+            />
 
     </LinearLayout>
 
     <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-       android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_home"
+        android:orientation="vertical"
+        android:layout_marginTop="60dp"
         android:paddingRight="@dimen/dimen_20dp"
         android:paddingLeft="@dimen/dimen_20dp"
-       >
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="400dp"
             android:orientation="vertical"
             android:paddingStart="20dp"
-            android:paddingTop="20dp"
+            android:paddingTop="@dimen/margin_10"
             android:paddingBottom="10dp"
             android:paddingLeft="20dp">
 
@@ -46,10 +50,10 @@
                 android:id="@+id/text_view_error_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
                 android:gravity="center"
                 android:text="Insufficient Funds!"
                 android:textColor="@color/device_problem"
+                android:fontFamily="@font/josefin_sans"
                 android:visibility="gone" />
 
             <LinearLayout
@@ -64,30 +68,32 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Mobile Number"
-                    android:fontFamily="@font/montserrat"
+                    android:text="Receiver Number"
+                    android:textSize="@dimen/margin_16"
+                    android:fontFamily="@font/josefin_sans"
                     />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/margin_10"
                     android:padding="0dp">
 
                     <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
                         android:id="@+id/crop_add_money_mobile_no"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
+                        android:background="@drawable/edittext_corner"
                         android:gravity="start|center_vertical"
                         android:hint="Enter.."
                         android:inputType="phone"
-                        android:paddingLeft="2dp"
-                        android:textAlignment="viewStart"
                         android:maxLength="9"
+                        android:paddingLeft="@dimen/dimen_15sp"
                         android:tag="+256 "
+                        android:textAlignment="viewStart"
                         android:textColor="@color/textColor"
-                        android:textSize="12sp"
-                        />
+                        android:textSize="14dp" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -102,91 +108,129 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Amount"
-                    android:fontFamily="@font/montserrat" />
+                    android:textSize="@dimen/margin_16"
+                    android:fontFamily="@font/josefin_sans" />
 
                 <EditText
                     android:id="@+id/crop_add_money_amount"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Enter.."
+                    android:layout_height="50dp"
+                    android:hint="e.g 40,000"
+                    android:background="@drawable/edittext_corner"
+                    android:textSize="14dp"
+                    android:layout_marginTop="@dimen/margin_10"
                     android:inputType="number"
-                    android:paddingLeft="2dp"
-                    android:textSize="12sp" />
+                    android:paddingLeft="@dimen/dimen_15sp"
+                    />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/button_add_money"
-                style="@style/Button_DW"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="right"
-                android:background="@drawable/solidbtn_shape"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/add_money"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
-
-            <Button
-                android:id="@+id/button_withdraw"
-                style="@style/Button_DW"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:background="@drawable/solidbtn_shape"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/withdraw"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:visibility="gone" />
+                android:gravity="right"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginRight="@dimen/margin_10"
+                android:paddingRight="@dimen/dimen_10dp"
+                android:layout_marginBottom="5dp"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/margin_10"
+                android:background="@drawable/rounded_corners_button">
+                <Button
+                    android:id="@+id/button_withdraw"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dip"
+                    android:background="@color/transparent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size"
+                    style="@style/Button_DW"
+                    android:backgroundTint="@color/textColor"
+                    android:text="@string/withdraw"
+                    android:textAllCaps="false"
+                    />
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="10dip"
+                    android:layout_gravity="right|center_vertical"
+                    android:src="@drawable/ic_right_arrow">
 
-            <Button
-                android:id="@+id/button_transfer"
-                style="@style/Button_DW"
-                android:layout_width="wrap_content"
+                </ImageView>
+
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:text="@string/transfer"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:visibility="gone" />
+                android:gravity="right"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:layout_marginRight="@dimen/margin_10"
+                android:paddingRight="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/rounded_corners_button">
+                <Button
+                    android:id="@+id/button_add_money"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dip"
+                    android:background="@color/transparent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size"
+                    style="@style/Button_DW"
+                    android:backgroundTint="@color/textColor"
+                    android:text="@string/add_money"
+                    android:textAllCaps="false"
+                    />
+                <ImageView
+                    android:layout_width="30dip"
+                    android:layout_height="30dip"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="10dip"
+                    android:layout_gravity="right|center_vertical"
+                    android:src="@drawable/ic_right_arrow">
+
+                </ImageView>
+
+            </FrameLayout>
 
 
         </LinearLayout>
 
         <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:gravity="end"
-           android:paddingEnd="20dp"
-           android:paddingBottom="6dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:paddingEnd="20dp"
+            android:paddingBottom="6dp"
             android:visibility="gone"
             android:paddingRight="20dp">
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="My Balance"
-               android:textStyle="bold"
-               android:layout_marginEnd="6dp"
-               android:layout_marginRight="6dp" />
-           <TextView
-               android:id="@+id/crop_add_money_balance_currency"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="UGX"
-               android:textSize="11sp"
-               android:layout_marginEnd="4dp"
-               android:layout_marginRight="4dp" />
-           <TextView
-               android:id="@+id/crop_add_money_balance"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="0"/>
-       </LinearLayout>
-   </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="My Balance"
+                android:textStyle="bold"
+                android:layout_marginEnd="6dp"
+                android:layout_marginRight="6dp" />
+            <TextView
+                android:id="@+id/crop_add_money_balance_currency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UGX"
+                android:textSize="11sp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp" />
+            <TextView
+                android:id="@+id/crop_add_money_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"/>
+        </LinearLayout>
+    </LinearLayout>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
