--- a/app/src/main/res/layout/wallet_content_loan_app_photos.xml
+++ b/app/src/main/res/layout/wallet_content_loan_app_photos.xml
@@ -30,7 +30,7 @@
             android:textColor="@color/textColor"
             android:text="Add Photos"
             android:textSize="20sp"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/josefin_sans"
             android:textStyle="bold"
             android:gravity="left" />
 
@@ -66,7 +66,7 @@
                     android:gravity="center_horizontal"
                     android:text="Add the front picture of your National ID"
                     android:textAlignment="center"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/josefin_sans"
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
 
@@ -82,7 +82,7 @@
                     android:gravity="center_horizontal"
                     android:text="Add the back picture of your National ID"
                     android:textAlignment="center"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/josefin_sans"
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
 
@@ -98,7 +98,7 @@
                     android:gravity="center_horizontal"
                     android:text="Add your selfie with a national ID placed on your chest"
                     android:textAlignment="center"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/josefin_sans"
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
 
@@ -130,7 +130,7 @@
                     style="@style/Button_DW"
                     android:textColor="@color/white"
                     android:background="@drawable/rectangular_green_solid"
-                    android:fontFamily="@font/montserrat"
+                    android:fontFamily="@font/josefin_sans"
                     android:textSize="20sp"
                     />
             </LinearLayout>
