--- a/app/src/main/res/layout/wallet_payment_methods.xml
+++ b/app/src/main/res/layout/wallet_payment_methods.xml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:theme="@style/AppTheme"
-    android:background="@color/white">
+    android:layout_height="320dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_gravity="center"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/solidwhite_shape"
+    tools:context=".activities.wallet.WalletHomeActivity">
+
 
     <LinearLayout
+        android:id="@+id/layout_add_money"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="20dp"
         >
 
         <TextView
+            android:id="@+id/digital_wallet_title_label"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Select"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dimen_20dp"
             android:gravity="center"
-            android:theme="@style/HeaderTheme"></TextView>
+            android:textStyle="bold"
+            android:textSize="25dp"
+            android:text="Select"
+            />
 
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
+        android:layout_marginTop="60dp"
         android:background="@color/white"
         >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -144,6 +150,7 @@
             </LinearLayout>
 
 
+        </LinearLayout>
     </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
