--- a/app/src/main/res/layout/wallet_popup_edittext.xml
+++ b/app/src/main/res/layout/wallet_popup_edittext.xml
@@ -15,13 +15,11 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="45.0dip"
-
             android:layout_weight="0.2"
-
             android:text="+"
             android:textAlignment="center"
-
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:gravity="center_horizontal" />
 
         <EditText
             android:id="@+id/edtCountryCode"
@@ -49,7 +47,8 @@
             android:singleLine="true"
 
             android:textColorHint="@color/hintColor"
-            android:textCursorDrawable="@drawable/color_cursor" />
+            android:textCursorDrawable="@drawable/color_cursor"
+            android:layout_marginRight="10dp" />
     </LinearLayout>
 
 </LinearLayout>
