--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:background">@color/white</item>
         <item name="android:textColorPrimary">@color/colorAccentGreen</item>
         <item name="android:textColorSecondary">@color/colorAccentGreen</item>
-        <item name="android:font">@font/montserrat</item>
+        <item name="android:font">@font/josefin_sans</item>
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -13,14 +13,14 @@
         <item name="colorPrimary">@color/colorAccentGreen</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:font">@font/montserrat</item>
+        <item name="android:font">@font/josefin_sans</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
 
     <style name="Button_DW" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:font">@font/montserrat</item>
+        <item name="android:font">@font/josefin_sans</item>
         <item name="android:textSize">14sp</item>
 
     </style>
