--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#34463F</color>
-    <color name="textColor">#62A169</color>
-    <color name="buttonColor">#51925E</color>
+    <color name="colorPrimary">#557f5f</color>
+    <color name="textColor">#031000</color>
+    <color name="buttonColor">#557f5f</color>
     <color name="colorPrimary_birds">#f4ad42</color>
     <color name="colorPrimaryDark">#161f2b</color>
     <color name="colorAccent">#2b8c41</color>
