--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,7 +78,7 @@
 
     <style name="MyPopupMenu" parent="Widget.AppCompat.PopupMenu">
         <item name="android:itemBackground">@drawable/m_color</item>
-        <item name="android:fontFamily">@font/droidserif</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:listPreferredItemHeightSmall">30dp</item>
     </style>
 
@@ -120,7 +120,7 @@
 
     <style name="HeaderTheme" parent="AppTheme">
         <item name="android:textAllCaps">true</item>
-        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">23sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/colorPrimary</item>
@@ -157,14 +157,14 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">14sp</item>
     </style>
 
     <style name="HeaderThemeActivity">
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/josefin_sans</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/black</item>
