--- a/app/src/main/res/layout/wallet_fragment_statement.xml
+++ b/app/src/main/res/layout/wallet_fragment_statement.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccentLight"
-    tools:context=".wallet.activities.TransactionsList" >
-
+    android:background="@color/colorAccentLight">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:theme="@style/HeaderThemeActivity"
             android:background="@color/white"
+            android:theme="@style/HeaderThemeActivity"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/statement_recycler_view"
