--- a/app/src/main/res/layout/activity_crop_income__expense_manager.xml
+++ b/app/src/main/res/layout/activity_crop_income__expense_manager.xml
@@ -7,16 +7,56 @@
     android:orientation="vertical"
     tools:context=".activities.farmrecords.CropIncomeExpenseManagerActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/mainView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#344834"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:id="@+id/tvtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/label_financial_records"
+                    android:textColor="#fff"
+                    android:textSize="18dp" />
+
+
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/label_add_financial_records"
+                android:textSize="@dimen/dimen_15sp"
+                android:padding="@dimen/margin_10">
+
+            </TextView>
 
 
 
@@ -314,8 +354,8 @@
 
                             android:gravity="center"
                             android:textSize="14sp"
-                            android:textColor="@color/colorPrimary"
-                            android:background="@drawable/input_shapes_grey_units"
+                            android:textColor="@color/white"
+                            android:background="@color/colorPrimary"
 
 
                             />
@@ -385,10 +425,10 @@
                             android:text="%"
 
                             android:gravity="center"
-                            android:background="@drawable/input_shapes_grey_units_right"
+                            android:background="@color/colorPrimary"
                             android:textSize="14sp"
                             android:layout_weight="0.8"
-
+                            android:textColor="@color/white"
                             />
 
 
@@ -507,9 +547,9 @@
                                 android:text="@string/ugx"
                                 android:gravity="center_vertical"
 
-                                android:textColor="@color/colorPrimary"
+                                android:textColor="@color/white"
                                 android:textSize="14sp"
-                                android:background="@drawable/input_shapes_grey_units"
+                                android:background="@color/colorPrimary"
 
                                 />
                             <EditText
