--- a/app/src/main/res/layout/activity_crops_manager.xml
+++ b/app/src/main/res/layout/activity_crops_manager.xml
@@ -4,9 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     android:orientation="vertical"
     tools:context=".activities.agronomy.CropsManagerActivity">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/mainView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#344834"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:id="@+id/tvtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/label_crops"
+                    android:textColor="#fff"
+                    android:textSize="18dp" />
+
+
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,6 +48,13 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dimen_15sp"
+            android:text="@string/label_add_crop"
+            android:padding="@dimen/margin_10"/>
 
 
 
@@ -343,8 +381,8 @@
                         android:padding="4dp"
                         android:text="@string/ugx"
                         android:textSize="14sp"
-                        android:textColor="@color/colorPrimary"
-                        android:background="@drawable/input_shapes_grey_units"
+                        android:textColor="@color/white"
+                        android:background="@color/colorPrimary"
                         android:gravity="center_vertical"
 
                         />
@@ -570,8 +608,8 @@
                     android:padding="4dp"
                     android:text="@string/ugx"
                     android:textSize="14sp"
-                    android:background="@drawable/input_shapes_grey_units"
-                    android:textColor="@color/colorPrimary"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"
                     android:gravity="center"
                     android:layout_weight="0.1"
 
@@ -596,8 +634,8 @@
                     android:text="/Units"
                     android:gravity="center"
                     android:layout_weight="0.2"
-                    android:background="@drawable/input_shapes_grey_units_right"
-                    android:textColor="@color/colorPrimary"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"
 
                     />
 
