--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -377,6 +377,7 @@
                             </LinearLayout>
 
                             <LinearLayout
+                                android:id="@+id/layout_agronomy"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
